--- a/html/onboarding3.html
+++ b/html/onboarding3.html
@@ -34,7 +34,7 @@
                         <div class="di"></div>
                         <div class="di di-active"></div>
                     </div>
-                    <a href="dashboard.html">
+                    <a href="signup.html">
                         <div class="onboarding-button">
                             <h2>GET STARTED</h2>
                         </div>
