--- a/html/signup.html
+++ b/html/signup.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>SIGN UP TERRAFIT</title>
     <style>
@@ -17,8 +18,9 @@
         }
 
         .container {
-            background-image: url('gym-photo.jpg');
-            background-size: cover; /* Adjusted background size */
+            background-image: url('../gym-photo.jpg');
+            background-size: cover;
+            /* Adjusted background size */
             background-position: center top;
             width: 100%;
             height: 100%;
@@ -104,21 +106,39 @@
             }
         }
     </style>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/9.1.0/firebase-app.js"></script>
+    <!-- Firebase Auth library -->
+    <script src="https://www.gstatic.com/firebasejs/9.1.0/firebase-auth.js"></script>
+
+    <!-- Firebase Modular SDK -->
+    <script type="module">
+
+        // Handle Sign Up button click
+        document.querySelector('input[type="submit"]').addEventListener('click', function (e) {
+            window.location.href = "./createWorkout.html";
+        });
+    </script>
+
+
 </head>
+
 <body>
     <div class="container">
         <div class="form-container">
             <div class="logo-container">
-                <img class="logo" src="terrafit-logo.svg" alt="TerraFit Logo">
+                <img class="logo" src="../terrafit-logo.svg" alt="TerraFit Logo">
             </div>
             <h1 class="join-text">Sign Up</h1>
             <input type="text" id="email" name="email" class="short-input" placeholder="Email/Username" required>
             <input type="password" id="password" name="password" class="short-input" placeholder="Password" required>
-            <input type="password" id="confirm_password" name="confirm_password" class="short-input" placeholder="Confirm Password" required>
+            <input type="password" id="confirm_password" name="confirm_password" class="short-input"
+                placeholder="Confirm Password" required>
             <input type="submit" value="Sign Up">
             <p class="login-link">Already have an account? <span class="login-text">Login</span></p>
         </div>
     </div>
-</body>
-</html>
 
+</body>
+
+</html>
